Added CSS file, Burger logo

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 
     <div class="container-fluid">
 
-    <img class="burgerimg" src="">
+    <img class="bglogo" src="../assets/img/50264e93aa486b4e54e140e6c8fb973a.png">
 
 
     <h1>Eat-Da-Burger!</h1>
@@ -39,3 +39,6 @@
             </div>
         </form> 
  </div>
+   <br></br>
+
+
