--- a/views/partials/burger-block.handlebars
+++ b/views/partials/burger-block.handlebars
@@ -4,6 +4,6 @@
 {{#if devour}}
 
 {{else}}
-<button class="eat, btn-primary, devour" data-id="{{id}}" data-neweaten="{{devour}}">Devour!</button>
+<button class="eat, devour" data-id="{{id}}" data-neweaten="{{devour}}">Devour !</button>
 {{/if}}
 </li>
