--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -2,10 +2,18 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 20px;
     color: black;
+    text-align: center;
     line-height: 34px;
-    background: ;
+    background: #ffcc66;
   }
 
+  .bglogo {
+    width: 300px;
+    height: 300px;
+    margin-top: 35px;
+
+}
+  
   .container {
     width: 90%;
     max-width: 960px;
@@ -13,18 +21,22 @@ body {
   }
   h1 {
     text-align: center;
-    line-height: 80px;
+    line-height: 50px;
     padding-left: 15px;
     color:Black;
     margin: 10px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-style: italic;
+    font-weight: bold;
+
 }
 .h2, h2 {
     line-height: 50px;
     margin-left: 40px;
     margin-right: 40px;
+    border-radius: 15px;
     font-size: 2rem;
-    background: black;
+    background: #333333;
     color: white;
     text-align: center;
 }
@@ -33,7 +45,20 @@ body {
     text-align: center;
     
 }
-.devour {background-color: rgb(0, 102, 255);
-        color: white}
+.devour {background-color: #00994d;
+        color: white;
+        margin: 4px 4px;
+        border-radius: 15px;
+    }
 .devour:hover {
     background-color: red }
+
+.btn {
+    margin: 2px 2px;
+    border-radius: 15px;
+    padding-top: 4px;
+    padding-bottom: 3px;
+    font-size: 20px;
+    background-color: #00994d;
+    border-color: black;
+}
