Refact the code, Created a ReadMe

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -60,5 +60,6 @@ body {
     padding-bottom: 3px;
     font-size: 20px;
     background-color: #00994d;
+    color: white;
     border-color: black;
 }
