--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 
     <div class="container-fluid">
 
-    <img class="bglogo" src="../assets/img/50264e93aa486b4e54e140e6c8fb973a.png">
+    <img class="bglogo" src="../assets/img/50264e93aa486b4e54e140e6c8fb973a.png" alt="Burger Logo">
 
 
     <h1>Eat-Da-Burger!</h1>
